use modules add welcome component add sidenav, toolbar add clear button to repos use mat list in branches instead of mat-nav-list

--- a/src/app/pages/branches/branches.component.html
+++ b/src/app/pages/branches/branches.component.html
@@ -5,12 +5,12 @@
   </mat-card-header>
   <mat-card-content>
 
-    <mat-nav-list>
+    <mat-list>
       <h3 mat-subheader>Branches:</h3>
       <mat-list-item *ngFor="let branch of branches">
         <h3 mat-line>{{branch.name}}</h3>
       </mat-list-item>
-    </mat-nav-list>
+    </mat-list>
 
   </mat-card-content>
 </mat-card>
